--- a/manifests/service-1.yml
+++ b/manifests/service-1.yml
@@ -5,7 +5,7 @@ metadata:
     labels:
         app: "portfoliokubernetescluster-0093"
 spec:
-    type: ClusterIP
+    type: LoadBalancer
     ports:
     - port: 80
       targetPort: 80
